--- a/src/05-text-links.scss
+++ b/src/05-text-links.scss
@@ -104,7 +104,7 @@ a,
   color: var(--link-underline);
 }
 
-/* Collapse external links / markdown links in edit mode */
+/* Collapse external links / markdown links in edit mode: CodeMirrorOptions + Legacy editor */
 body.style-active-selection:not(.ebullientworks-show-edit-mode-links) div:not(.CodeMirror-activeline) > .CodeMirror-line {
   .cm-string.cm-url:not(.cm-formatting) {
     font-size: 0;
@@ -112,5 +112,17 @@ body.style-active-selection:not(.ebullientworks-show-edit-mode-links) div:not(.C
   .cm-string.cm-url:not(.cm-formatting)::after {
     content: '·';
     font-size: 1rem;
+  }
+}
+/* CM6 editor */
+body:not(.ebullientworks-show-edit-mode-links) .markdown-source-view.mod-cm6 {
+  div.cm-line:not(.cm-active) {
+    > .cm-string.cm-url:not(.cm-formatting) {
+      font-size: 0;
+    }
+    > .cm-string.cm-url:not(.cm-formatting)::after {
+      content: '·';
+      font-size: 1rem;
+    }
   }
 }
